<resources>
    <string name="app_name">M8</string>
    <string name="splash">Intelligent Sharing</string>
    <string name="information">© M8s World 2019. All rights reserved</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="click"><u>click here</u></string>
    <string name="commission">Commission "\n"Tree</string>
    <string name="Upload">Upload"\n"Items</string>
    <string name="View">View all"\n"Items</string>
    <string name="myAccount">My"\n"Account</string>
    <string name="refer">M8s business referral services earn 50% commission of services purchased</string>
    <string name="concept">"\n\n"Concept by Bainzy for M8s  World "\n"Build by www.mandywebdesign.com</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="commisiontree">My Commission Tree List</string>
    <string name="descrip"><u>Description :</u></string>
    <string name="description">i m a android developer in mandywebdesing</string>
    <string name="feature"><u>Features :</u></string>
    <string name="sharing">Share in any or all networks to create new commission trees</string>
    <string name="myshare"><u>buy more shares</u></string>
    <string name="sharethis">Buy or Share</string>
    <string name="viewallprperty">Any M8 can share any property in any part of the world with any other M8 if they believe that share will result in a sale</string>
    <string name="contact">Contact"\n"seller</string>
    <string name="mandata">Please indicate what % of your commission you would like to offer M8s for finding you a buyer. 50% is our normal average.</string>
    <string name="mandata2">Indicate a cash amount you would like to offer M8\'s for selling your property(s) :</string>
    <string name="mandata3">Set this amount for all of your property(s) sold on M8\'s World :</string>
    <string name="viewmandata"><u>View Mandata text</u></string>
    <string name="date">Date "\n" 18/2/2019</string>
    <string name="edit"><u>Edit</u></string>
    <string name="power">Min M<sup>2</sup></string>
    <string name="googleclientId">AIzaSyCGlfDp6qPfEGc71tvwynC-X0dOXWpkIQs</string>
    <string name="title_activity_maps">Map</string>
    <string name="facebook_app_id">328697287838869</string>
    <string name="fb_login_protocol_scheme">fb328697287838869</string>
    <string name="NoInternet">No internet connection</string>
    <string name="chf">CHF"\n"0</string>

    <string name="mytree">My Tree: </string>
    <string name="propertyName">Property Name: </string>
    <string name="price">Price: </string>
    <string name="commissi">Commission: </string>
    <string name="Delete">Delete</string>
    <string name="Vi">View</string>
    <string name="Share">Share</string>
    <string name="BusinessName">First name*</string>
    <string name="BusinessContact">Last name*</string>
    <string name="businessEmail">Email address*</string>
    <string name="businessPhone">Contact No*</string>
    <string name="Address1">Address1*</string>
    <string name="Address2">Address2*</string>
    <string name="TownCity">Town/City*</string>
    <string name="Postcode">Post code*</string>
    <string name="next">Next</string>
    <string name="link">This is your share link don\'t lose this link</string>
    <string name="iagree">I agree with M8\'s terms and conditions, privacy policy and  art statement</string>
    <string name="GPSAlertDialogTitle">Gps Tittle</string>
    <string name="GPSAlertDialogMessage">GPS Meesage</string>
    <string name="action_settings">Seeting gps</string>
    <string name="cancel">Cancel</string>
    <string name="doyou">Your package is expired.You have to purchase more packages to continue.</string>
    <string name="logoutmessage">Are you sure want to Logout ?</string>
    <string name="terms">Please accept the terms and condition</string>
    <string name="sharCommision">Share Comission :</string>
    <string name="uploadPro">Upload  property images (max 10)</string>
    <string name="Download">Download PDF</string>
    <string name="propertyNumber">Property number(if Known)</string>
    <string name="agent">For our 1000s of M8s to market and find buyers for your properties we need to know the average % of a properties sell price you charge your clients."\n\n"As experienced real estate agents we understand that all deals are SUBJECT TO CONTRACT which is only calculable on completion of each sale."\n\n"Please indicate that average  fee here.</string>
    <string name="agent2">Important."\n\n"PLEASE BE AS ACCURATE AS POSSIBLE. IF AMOUNTS THAT ARE ADVERTISED ON OUR COMMISSION TREES VARY TOO MUCH FROM THE FINAL COMPLETION PRICES OUR M8S MAY AVOID DEALING WITH YOUR COMPANY IN THE FUTURE.</string>
    <string name="ShreBtn">You can share this item up to 10 times. Share intelligently, EARN wisely!"\n"You have shared this item</string>
    <string name="btnBuy">By pressing BUY you are committing  to buy this property. Once you have exchanged contracts or given a deposit to the seller this property will be taken off the market. Your request and contact details have been sent to the seller.</string>
    <string name="btnContact">To arrange a viewing click the icon so an email will be  sent to the seller. Please wait for them to contact you</string>
    <string name="freagent">For our 1000s of M8s to market and find a buyer for your property we charge the standard real estate agent fee of 3% of the selling price to pay them."\n\n"As experienced real estate agents we understand that all deals are SUBJECT TO CONTRACT and the price is only calculable on completion of each individual sale."\n\n"We will only charge you this fee when your property has been sold."\n\n"YOU DO NOT PAY ANYTHING TO M8 IF WE DO NOT FIND YOU A BUYER."\n\n"Please click OK to begin the M8 process and to create your mandate.</string>
    <string name="noInternet">No internet Connection</string>
    <string name="slowinternet">Slow or no Internet Connection"\n"Please check your internet setting</string>
</resources>
