<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/topmargin">

    <ImageView
        android:id="@+id/R_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:padding="@dimen/drawablepadding"
        android:src="@drawable/ic_right" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/topmargin"
        android:orientation="vertical">

        <LinearLayout
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mytree"
                android:textColor="@color/subheading"
                android:textSize="@dimen/text" />

            <TextView
                android:id="@+id/R_mytree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tree 1 for Family"
                android:textColor="@color/headingcolor"
                android:textSize="@dimen/text"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/drawablepadding"
            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/propertyName"
                android:textColor="@color/subheading"
                android:textSize="@dimen/text" />

            <TextView
                android:id="@+id/R_property"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/headingcolor"
                android:textSize="@dimen/text"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/drawablepadding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="@color/subheading"
                android:textSize="@dimen/text" />

            <TextView
                android:id="@+id/R_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/green"
                android:textSize="@dimen/text"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/drawablepadding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commissi"
                android:textColor="@color/subheading"
                android:textSize="@dimen/text" />

            <TextView
                android:id="@+id/R_commission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/green"
                android:textSize="@dimen/text"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/linear"
        android:layout_marginTop="@dimen/topmargin"
        android:background="@color/subheading" />


</RelativeLayout>